set seeker and volume up and fixed visualizer bars from expading too much when audio stops or volume goes to zero

--- a/Animuse/animuse.css
+++ b/Animuse/animuse.css
@@ -8,6 +8,8 @@
   --bg-color-1: #231111;
 }
 
+/** general styles **/
+
 * {
   margin: 0;
   padding: 0;
@@ -23,6 +25,14 @@ body {
 i {
   pointer-events: none;
 }
+
+input[type="range"]{
+  height: 2px;
+  accent-color: var(--bg-color-1);
+}
+
+
+/** more sepecific styles **/
 
 .wrapper {
   height: 100%;
@@ -40,8 +50,10 @@ i {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
   height: 5rem;
   backdrop-filter: blur(0.5rem);
+  position: relative;
 }
 
 .panel button {
@@ -50,6 +62,29 @@ i {
   color: var(--primary-text-color);
   font-size: 2rem;
   cursor: pointer;
+}
+
+.panel .audio-seek-container{
+  position: absolute;
+  top: -2rem;
+  left: 0;
+  width: 100%;
+  height: 0.5rem;
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  background-color: rgba(0,0,0,0.5);
+  z-index: 10;
+}
+
+.panel .audio-seek-container input{
+  width: 100%;
+  flex: 1;
+}
+
+.panel .audio-seek-container .time-display{
+  width: 4rem;
+  text-align: center;
 }
 
 /** controls styles **/
@@ -128,6 +163,7 @@ i {
   opacity: 0;
   pointer-events: none;
   transition: all 0.5s;
+  z-index: 50;
 }
 
 .more-controls.active .menu{
@@ -137,8 +173,13 @@ i {
 
 .more-controls .menu .volume-control {
   display: flex;
+  align-items: center;
   gap: 10px;
   padding: 0.5rem 1rem;
+}
+
+.more-controls .menu input{
+  accent-color: blue;
 }
 
 /** styles for visalizer **/
